* [WeekDaySelect] Fixed vertical alignment of text at demo components

--- a/demo/src/Views/WeekDaySelect/WeekDaySelectView.scss
+++ b/demo/src/Views/WeekDaySelect/WeekDaySelectView.scss
@@ -12,6 +12,7 @@
     border-radius: 100vh;
     width: var(--wds-item-size);
     height: var(--wds-item-size);
+    line-height: var(--wds-item-size);
   }
 
   .checkbox__check {
